# practise

./: README.md  ruhexiemakefile.txt
20151015/: makefile
AISM/: Makefile  README.md  allIsServerManaged.cpp  tags
AISM/client/: AClient  Makefile  client.c
AISM/config/: server.conf
AISM/depend/include/: parse_config.h
AISM/example/: esmtp  esmtp.c  esmtp.cpp  esmtp.c~  libesmtp-1.0.4-15.el6.src.rpm  mail.eml  test-mail.eml
AISM/example/libesmtp-1.0.6/: Makefile  config.h  config.status  (+3 more)
AISM/examples/: server.cpp
AISM/include/: debug.h  global_errno.h
AISM/server/: AServer  Makefile  Makefile.am  configure.ac  myclient.cpp  myserver.cpp  server.c
cpu_test/: cputest  cputest.c
elf/: GetSvn  GetSvn.cpp  Getelfinfo.sh  Makefile  getSvn.c  getsvninfo  getsvninfo.c  gmon  hello  helloworld.c  readme
elf/compare/: Makefile  compare  compare.c  diff_func.sh  disasm_diffmsg  disasm_msg1  file1  file2  func_disasm_new  func_disasm_old  getobj  getobj.c  gmon_new  gmon_new2  gmon_old  libcapbuf.a_new  libcapbuf.a_old
include/: apue.h
nic_stat/: Makefile  README.md  nic_stat.cpp  tags  任务书(2).docx
npc/: Makefile  capture-pcap-util-unix.c  capture-pcap-util.c  capture-pcap-util.h  capture_ifinfo.h  capture_opts.c  capture_opts.h  capture_sync.c  config.h  dump.cpp  dump.h  ip2.h  libpcap.h  npc.cpp  npc_errno.h  npc_interface.cpp  npc_util.cpp  npc_util.h  pcapio.c  pcapio.h  setnpc.sh
smallworm/: worm.cpp
test/: Makefile  getsize  getsize.c  helloworld.c  int_max  int_max.c  makefile
testgetopt/: testgetopt  testgetopt.c
unpv12e/: config.status
(+34 files in other folders)
